# unitTest

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp  sum.cpp
test/: CMakeLists.txt  test.cpp  test.h
